syntax = "proto3";

package proto.dynamic.v1;

import "proto/dynamic/v1/dynamic.proto";

option go_package = "github.com/mamoruuji/dynamic_novel_api/gen/proto/dynamic/v1;dynamicv1";

message AddPageRequest {
  int32 chapter_id = 1;
}

message AddPageResponse {
  int32 page_id = 1;
  string name = 2;
  int32 order = 3;
  string created_time = 4;
}

message DeletePageRequest {
  int32 page_id = 1;
}

message DeletePageResponse {
  string status = 1;
  string message = 2;
}

message UpdatePageNameRequest {
  int32 page_id = 1;
  string name = 2;
}

message UpdatePageNameResponse {
  int32 page_id = 1;
  string updated_time = 2;
}

service PageService {
  rpc AddPage(AddPageRequest) returns (AddPageResponse) {}
  rpc DeletePage(DeletePageRequest) returns (DeletePageResponse) {}
  rpc UpdatePageName(UpdatePageNameRequest) returns (UpdatePageNameResponse) {}
}
